--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,6 +9,7 @@
   },
   "keywords": [],
   "author": "",
+  "client": "npm run start --prefix ./frontend",
   "license": "ISC",
   "dependencies": {
     "chart.js": "^2.9.3",
